# WindowsSymbolsByVersion

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  ConvertConfig.ini  LICENSE  README.md  badge.json  builds_state.json  config.template  copy_from_workflow.py  index.html  index.json  mkdocs.yml  mutex_queue  packages.txt  priority.json  problematic.json  process_builds.json  pyproject.toml  requirements.txt  search.html  uup_download_windows.cmd
.claude/: .headroom_wrap_marker.json
cli/: README.md  pyproject.toml
cli/src/winsyms/: __main__.py  cli.py  index.py  manifest.py  pdblister.py
code/: after_split.sh  daily.py  dockerfile  extract_and_parse.sh  gen_docs_index.py  get.py  get_editions.py  get_lang.py  get_name.py  get_uupdump_script.sh  gha.py  listid.py  main.sh  main2.sh  main3.sh  merge_manifests.sh  merge_paths.py  mmmm.sh  move_iso_dir.bat  pdb_finding.py  split_file.sh  state.py  uupdump.py  viewed_updates.json  wim_dedup.py
docs/: index.md  versions.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
manifests/: 0019d8ed-e89b-4b79-9f76-9f1c77461e5f.manifest  00267014-c3dd-4b50-9ca8-f41021fdff35.files.json  00267014-c3dd-4b50-9ca8-f41021fdff35.manifest  002ea580-e6b8-4a16-9b83-536dc48fedb3.files.json  002ea580-e6b8-4a16-9b83-536dc48fedb3.manifest  0092e58a-d33d-47ec-8dd6-daf6d745be13.files.json  0092e58a-d33d-47ec-8dd6-daf6d745be13.manifest  009cea5e-2175-4dc7-87c0-16ec7f0e40da.files.json  (+2760 more)
src/: daily.py  (+9 more)
(+22 files in other folders)
